<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddBooksFragment">

    <data>
        <variable
            name="book"
            type="com.example.books.data.SearchedBook" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/input_book_image"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="8dp"
                    android:importantForAccessibility="no"
                    android:layout_marginTop="3dp"
                    app:srcUrl="@{book.imgUrl}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_book_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_book_name"
                        android:animateLayoutChanges="true"
                        app:startIconDrawable="@drawable/book_image"
                        app:helperText="Make sure it's not too long"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/in_book_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@{book.title.toString()}"
                            android:inputType="textAutoComplete|textAutoCorrect"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_author_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/input_author_name"
                        android:animateLayoutChanges="true"
                        app:startIconDrawable="@drawable/input_author_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/in_author_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textAutoComplete|textPersonName"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Topic"
                android:animateLayoutChanges="true"
                app:startIconDrawable="@drawable/input_topic"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_topic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoCorrect|textAutoComplete"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_chapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Current Chapter"
                android:animateLayoutChanges="true"
                app:startIconDrawable="@drawable/input_chapter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_chapter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords|textAutoComplete"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_total_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/input_total_page"
                android:animateLayoutChanges="true"
                app:startIconDrawable="@drawable/input_page"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_total_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{book.pageCount.toString()}"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pages_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/input_pages_read"
                app:helperText="To calculate read %"
                android:animateLayoutChanges="true"
                app:startIconDrawable="@drawable/input_page"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/in_pages_read"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/input_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/input_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp" />

        </LinearLayout>

    </ScrollView>

</layout>